--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,14 @@ html {
   font-size: 10px;
 }
 .primary-btn {
-  background-color: orange;
+  background: #ff900e;
   color: #fff;
   border: 0;
-  padding: 10px;
+  padding: 10px 20px;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.8rem;
   font-weight: 600;
+  /* border-radius: 8px; */
 }
 
 /* nav section style */
@@ -21,6 +22,7 @@ html {
 header {
   background: rgba(255, 144, 14, 0.1);
   padding: 10px 240px;
+  /* border: 2px solid red; */
 }
 nav {
   display: flex;
@@ -48,8 +50,8 @@ nav li a {
 
 /* banner section style */
 .banner-content {
-  border: 2px solid black;
-  max-width: 600px;
+  /* border: 2px solid black; */
+  max-width: 60rem;
   text-align: center;
   margin: 0px auto;
 }
@@ -62,4 +64,27 @@ nav li a {
   color: #727272;
   font-size: 1.6rem;
   font-weight: 400;
+}
+.banner img {
+  width: 100%;
+  margin-top: 10px;
+}
+
+/* responsive for small device */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 10px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+/* responsive for medium device */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
 }
